k8s/deploy_postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: nfs-postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
        - image: postgres:12.19-alpine3.20
          imagePullPolicy: Always
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: nfs-postgres-data
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1Gi
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: nextcloud
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
