k8s/deploy_nextcloud.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
        - name: nfs-nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-pvc-config
        - name: nfs-nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-pvc-download
      containers:
        - image: lscr.io/linuxserver/nextcloud:29.0.5
          imagePullPolicy: Always
          name: nextcloud
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: nfs-nextcloud-config
            - mountPath: /data
              name: nfs-nextcloud-data
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 2
              memory: 8Gi 
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: nextcloud-svc
  namespace: nextcloud
  labels:
    app: nextcloud
  annotations:
    metallb.universe.tf/allow-shared-ip: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nextcloud-route
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "nextcloud.snoozyhomelab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud-svc
          kind: Service
          namespace: nextcloud
          port: 80
